tests/ui/coherence/coherence-cow_conflicting.stderr
error[E0119]: conflicting implementations of trait `Remote` for type `Pair<Cover<_>, Cover<Cover<_>>>`
  --> $DIR/coherence-cow_conflicting.rs:19:1
   |
LL | impl<T> Remote for Pair<T,Cover<T>> { }
   | ----------------------------------- first implementation here
...
LL | impl<T,U> Remote for Pair<Cover<T>,U> { }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `Pair<Cover<_>, Cover<Cover<_>>>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0119`.
